avoid broadcast link wrapping

--- a/src/scss/_archive.scss
+++ b/src/scss/_archive.scss
@@ -247,3 +247,7 @@ sd-broadcast {
     }
   }
 }
+
+.nowrap {
+  white-space: nowrap;
+}
